i have done the password hashing and i have started the jwt authentication

--- a/Backend/Pipfile
+++ b/Backend/Pipfile
@@ -8,6 +8,8 @@ flask = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
 faker = "*"
+flask-bcrypt = "*"
+flask-jwt-extended = "*"
 
 [dev-packages]
 
